register and login page routes are created

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 CONNECT_DATABASE = mongodb+srv://SpeerIntern:SOHeE7iCP5bgZaYo@cluster0.sr18d.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+SECRET = a;jfdsakfa231423423
